# credit_card

./: .gitlab-ci.yml  README.md  docker-compose.yml  openapi.json  script.py  setup.cfg
authorization/: .dockerignore  CONTRIBUTING.md  Dockerfile  prometheus.yml  pyproject.toml
authorization/helm/: test.yaml
authorization/helm/auth/: .helmignore  Chart.yaml  values.yaml
authorization/helm/auth/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
authorization/k8s/: deployment.yaml  service.yaml
authorization/src/app/: adaptor.py  config_db.py  main.py  middlewares.py  routers.py
authorization/src/migrations/: env.py
authorization/tests/: conftest.py
main_service/: CONTRIBUTING.md  Dockerfile  alembic.ini
main_service/helm/: test.yaml
main_service/helm/main/: Chart.yaml  values.yaml
main_service/k8s/: configmap.yaml  deployment.yaml  service.yaml
main_service/src/app/: adaptor.py  config_db.py  main.py  routers.py
main_service/src/migrations/: env.py
main_service/tests/: conftest.py
main_service/tests/integration/: test_main.py
verification/: Dockerfile  database.py  pyproject.toml
verification/helm/: test.yaml
verification/helm/verify/: Chart.yaml  values.yaml
verification/helm/verify/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
verification/k8s/: deployment.yaml  service.yaml
verification/src/app/: config.py  main.py  utils.py
verification/src/dto/models/: log.py  token.py  transactions.py  user.py  user_storage.py
verification/src/dto/schemas/: schemas.py
(+32 files in other folders)
